# aiaxe

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
aiaxe/: __main__.py  _version.py
aiaxe/components/: _requests_handler.py
aiaxe/scripts/: build_layout.py
aiaxe/src/aiaxe/: __init__.py
aiaxe/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
aiaxe/ui/src/: App.css  App.tsx  main.tsx
aiaxe/ui/src/components/: Home.tsx  Navbar.tsx
aiaxe/utils/: cli.py
src/aiaxe/: server.py
src/aiaxe/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
src/aiaxe/frontend/src/: app.html
src/aiaxe/frontend/src/routes/: +page.svelte
src/aiaxe/scripts/: build_layout.py  build_svelte.py
src/aiaxe/ui/: package-lock.json  package.json  vite.config.ts
src/aiaxe/ui/src/: main.tsx
