[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aiaxe"
description = "AI Chains to Automate and Streamline Workflows"
version = "0.0.1"
authors = [
    {name = "toolexi", email = "jayachandra.s.reddy@gmail.com"},
]
keywords = ["aiaxe", "ai", "automation","GenAI"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


dependencies = [
    "build==1.2.2.post1",
    "click==8.1.7",
    "duckdb==1.1.3",
    "flake8==7.1.1",
    "black==24.10.0",
    "ruff==0.8.0",
    "Flask==3.1.0"
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120