[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aiaxe"
description = "AIAxe - MLOps and AIOps Platform"
version = "0.0.1"
authors = [
    {name = "toolexi", email = "jayachandra.s.reddy@gmail.com"},
]
keywords = ["aiaxe", "ai", "automation","GenAI"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "build==1.2.2.post1",
    "click==8.1.7",
    "duckdb==1.1.3",
    "flake8==7.1.1",
    "black==24.10.0",
    "ruff==0.8.0",
    "fastapi==0.115.6"
]

[tool.setuptools]
packages = ["aiaxe"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120