[build-system]
requires = ["setuptools>=61.0"  ]
build-backend = "setuptools.build_meta"

[project]
name = "aiaxe"
description = "AIAxe - MLOps and AIOps Platform"
version = "0.0.1"
authors = [
    {name = "Jay Reddy", email = "jayachandra.s.reddy@gmail.com"},
]
keywords = ["aiaxe", "ai", "automation","GenAI"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "build==1.2.2.post1",
    "click==8.1.7",
    "duckdb==1.1.3",
    "flake8==7.1.1",
    "black==24.10.0",
    "fastapi==0.115.6",
    "uvicorn==0.32.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aiaxe*"]
exclude = ["venv_aiaxe*","__pycache__*","aiaxe.egg-info*"]

[project.scripts]
aiaxe = "aiaxe.__main__:cli"

[tool.setuptools.package-data]
aiaxe = [
    "**/*.js",
    "**/*.ts",
    "**/*.json",
    "**/*.html",
    "**/*.css",
    # Add any other file types you need
]

[tool.black]
line-length = 120

